[CORE] Add unit tests for configuration loading and validation
Signed-off-by: Wolfieheart <xmakeitrain94@gmail.com>